--- a/openatlas/templates/source/update.html
+++ b/openatlas/templates/source/update.html
@@ -5,5 +5,9 @@
     > {{ _('edit')|uc_first }}
 {% endblock %}
 {% block content %}
+    {% if modifier %}
+        <p class="error">{{_('error modified by')}}: {{ modifier }}</p>
+        <p><a class="button" href="{{ url_for('source_update', id_=source.id) }}">{{ _('reload')|uc_first }}</a></p>
+    {% endif %}
     {{ form|display_form|safe }}
 {% endblock %}
