--- a/openatlas/templates/settings/index.html
+++ b/openatlas/templates/settings/index.html
@@ -10,30 +10,22 @@
     <div id="tabs" class="tabs-container">
         <ul>
             {% for group in groups: %}
-                <li>
-                    <a href="#tab-{{ group }}">{{ group|uc_first }}</a>
-                </li>
+                <li><a href="#tab-{{ group }}">{{ group|uc_first }}</a></li>
             {% endfor %}
         </ul>
         {% for group, items in groups.items(): %}
             <div id="tab-{{ group }}">
                 <div class="data-table">
                     {% for name, value in items.items() %}
-                        {% set style = 'class ="faded"' if 'mail' in name and settings['mail'] else '' %}
-                        <div {{ style }}>
+                        {% set style = 'class ="faded"' if group == 'mail' and not settings['mail'] else '' %}
+                        <div {{ style|safe }}>
                             <div>{{ name|uc_first }}</div>
                             <div>{{ value }}</div>
                         </div>
                     {% endfor %}
                 </div>
                 {% if settings['mail'] and group == 'mail' %}
-                    <form id="test-mail-form" name="test-mail-form" style="margin-top:1em;"
-                          method="post" action="/settings#tab-mail">
-                        <input id="test-mail-receiver" name="test-mail-receiver"
-                               value="{{ settings['mail_from_email'] }}" class="required"><br />
-                        <button id="form-submit" name="form-submit" style="font-size:0.9em;"
-                            type="submit">{{ _('send_test_mail') }}</button>
-                    </form>
+                    {{ form|display_form|safe }}
                 {% endif %}
             </div>
         {% endfor %}
