Login mails, updating external links

--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -112,7 +112,7 @@
                 <div style="clear:both;"></div>
                 <div id="powered-by">
                     Another <a target="_blank" href="http://openatlas.eu">OpenAtlas</a>
-                    project powered by <a target="_blank" href="http://craws.net">craws.net</a>
+                    project powered by <a target="_blank" href="https://craws.net">craws.net</a>
                 </div>
             {% endif %}
             <div style="clear:both"></div>
