--- a/openatlas/templates/index/credits.html
+++ b/openatlas/templates/index/credits.html
@@ -11,17 +11,17 @@
     </p>
     <p>
         <strong>Alexander Watzinger</strong>
-        <a target="_blank" href="http://craws.net">http://craws.net</a><br />
+        <a target="_blank" href="https://craws.net">https://craws.net</a><br />
         Software Development, CIDOC CRM Adaptions and Mappings
     </p>
     <p>
         <strong>Jan Belik</strong>
-        <a target="_blank" href="http://janbelik.com">http://janbelik.com</a><br />
+        <a target="_blank" href="https://janbelik.com">https://janbelik.com</a><br />
         Graphic Design
     </p>
     <p>
         <strong>Daniel Kittel</strong>
-        <a target="_blank" href="http://craws.net">http://craws.net</a><br />
+        <a target="_blank" href="https://craws.net">https://craws.net</a><br />
         Quality Assurance
     </p>
     <h1>Funding</h1>
@@ -37,7 +37,7 @@
              alt="Frontier, Contact Zone or No Man's Land" />
     </a>
     <br/><br/>
-    <a target="_blank" href="http://www.oeaw.ac.at/en/austrian-academy-of-sciences/">
+    <a target="_blank" href="https://www.oeaw.ac.at/">
         <img src="/images/sponsors/logo_oeaw.png" alt="ÖAW" />
     </a>
     <a target="_blank" href="http://www.oeaw.ac.at/imafo/">
