--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -10,6 +10,9 @@
             <a href="{{ url_for('settings_index') }}">{{ _('settings')|uc_first }}</a>
             <a href="{{ url_for('admin_orphans') }}">{{ _('orphaned entries')|uc_first }}</a>
             <a href="{{ url_for('admin_log') }}">{{ _('log')|uc_first }}</a>
+            {% if session['settings']['mail']: %}
+                <a href="{{ url_for('admin_newsletter') }}">{{ _('newsletter')|uc_first }}</a>
+            {% endif %}
         {% endif  %}
     </div>
 {% endblock %}
