--- a/openatlas/templates/login/reset_password.html
+++ b/openatlas/templates/login/reset_password.html
@@ -2,7 +2,7 @@
 {% block breadcrumb %}
     <a href="{{ url_for('index') }}">{{ _('overview')|uc_first }}</a>
     > <a href="{{ url_for('login') }}">{{ _('login')|uc_first }}</a>
-    > {{ _('forgot your password?') }}
+    > {{ _('Forgot your password?') }}
 {% endblock %}
 {% block content %}
     <p>{{ _('info password reset') }}</p>
