--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -66,7 +66,7 @@ form input[type="text"].year {
     padding: 0;
 }
 
-#index-search #search {
+#global-search {
     font-size: 0.8em;
     margin-right: 0;
 }
