Removed maintenance and offline options

--- a/openatlas/templates/settings/update.html
+++ b/openatlas/templates/settings/update.html
@@ -14,9 +14,7 @@
             (form.default_language.label, form.default_language),
             (form.default_table_rows.label, form.default_table_rows),
             (form.log_level.label, form.log_level),
-            (form.debug_mode.label, form.debug_mode),
-            (form.maintenance.label, form.maintenance),
-            (form.offline.label, form.offline),
+            (form.debug_mode.label, form.debug_mode)
         ] %}
         {% set data_mail = [
             (form.mail.label, form.mail),
