Added image information for 403 and 404

--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -4,6 +4,11 @@ html, body, input, select, textarea {
     font-family: helvetica, arial, sans-serif;
 }
 
+span.image-info {
+    font-size: 0.8em;
+    font-style: italic;
+}
+
 #map {
     float: left;
     height: 440px;
