User and activity view

--- a/openatlas/templates/403.html
+++ b/openatlas/templates/403.html
@@ -8,16 +8,14 @@
         403 - Forbidden
     </p>
     <p>
-        <img src="/images/layout/403.jpg" alt="403 - Forbidden" width="500" /><br />
-        <span class="image-info">
-            Statue of Egyptian King Psamtik I excavation (from commons.wikimedia.org)
-        </span>
+        {{ _('It seems you are not welcomed here.') }}
     </p>
     <p>
-        It seems you are not welcomed here.
+        {{ _('Use the back button of your browser or click <a href="/">here</a> to go to the main page.') }}
     </p>
     <p>
-        Use the back button of your browser or click <a href="/">here</a> to go to the main page.
+        <img src="/images/layout/403.jpg" alt="403 - Forbidden" /><br />
+        Statue of Egyptian King Psamtik I excavation (commons.wikimedia.org)
     </p>
 </div>
 {% endblock %}
