--- a/openatlas/templates/404.html
+++ b/openatlas/templates/404.html
@@ -8,19 +8,17 @@
         404 - File not found
     </p>
     <p>
-        <img src="/images/layout/404.jpg" alt="404 - File not found" /><br />
-        <span class="image-info">Excavation of the Oseberg ship (from commons.wikimedia.org)</span>
+        {{ _('We are so sorry!') }}
+    </p>
+	<p>
+        {{ _('We searched a long time but this document does not exist. Maybe you mistyped or followed a broken link.') }}
+    </p>
+	<p>
+        {{ _('Use the back button of your browser or click <a href="/">here</a> to go to the main page.') }}
     </p>
     <p>
-        We are so sorry!
-    </p>
-	<p>
-        We searched a long time but this document does not exist.
-        Maybe you mistyped or followed a broken link.
-    </p>
-	<p>
-        Use the back button of your browser or click
-        <a href="/">here</a> to go to the main page.
+        <img src="/images/layout/404.jpg" alt="404 - File not found" /><br />
+        Excavation of the Oseberg ship (from commons.wikimedia.org)
     </p>
 </div>
 {% endblock %}
