--- a/openatlas/templates/place/update.html
+++ b/openatlas/templates/place/update.html
@@ -6,7 +6,7 @@
 {% endblock %}
 {% block content %}
     {% if modifier %}
-        <p class="error">{{ _('error modified by %(username)s', username=modifier) }}</p>
+        <p class="error">{{ _('error modified by %(username)s', username=modifier|safe) }}</p>
         <p><a class="button" href="{{ url_for('place_update', id_=object_.id) }}">{{ _('reload')|uc_first }}</a></p>
     {% endif %}
     <div id='map-info-display' style="float:left;">
