--- a/openatlas/templates/403.html
+++ b/openatlas/templates/403.html
@@ -14,7 +14,7 @@
         {{ _('Use the back button of your browser or click <a href="/">here</a> to go to the main page.') }}
     </p>
     <p>
-        <img src="/images/layout/403.jpg" alt="403 - Forbidden" /><br />
+        <img src="/static/images/layout/403.jpg" alt="403 - Forbidden" /><br />
         Statue of Egyptian King Psamtik I excavation (commons.wikimedia.org)
     </p>
 </div>
