Fixes for serving static files, added noopener rel for external links

--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -218,7 +218,7 @@ img.zoom {
     vertical-align: middle;
 }
 
-#content {
+main {
     margin: 1em;
     text-align: left;
     font-size: 0.9em;
@@ -444,7 +444,7 @@ input[type=submit] {
     width: 100%;
 }
 
-#content .ui-tabs-vertical .ui-tabs-nav li a {
+main .ui-tabs-vertical .ui-tabs-nav li a {
     float: none;
     display: block;
 }
