--- a/openatlas/templates/index/index.html
+++ b/openatlas/templates/index/index.html
@@ -38,11 +38,11 @@
         <div>{{ intro|safe }}</div>
         <div>
             {{ _('text_intro',
-                link_openatlas='<a target="_blank" href="http://openatlas.eu/">OpenAtlas</a>'|safe,
-                link_github='<a target="_blank" href="https://github.com/craws/OpenAtlas-Python">GitHub</a>'|safe,
-                link_cidoc='<a target="_blank" href="http://www.cidoc-crm.org/">CIDOC CRM</a>'|safe,
-                link_wiki='<a target="_blank" href="https://redmine.craws.net/projects/uni/wiki">Wiki</a>'|safe,
-                link_demo='<a target="_blank" href="https://openatlas.craws.net">Demo</a>'|safe
+                link_openatlas='<a target="_blank" rel="noopener" href="http://openatlas.eu/">OpenAtlas</a>'|safe,
+                link_github='<a target="_blank" rel="noopener" href="https://github.com/craws/OpenAtlas-Python">GitHub</a>'|safe,
+                link_cidoc='<a target="_blank" rel="noopener" href="http://www.cidoc-crm.org/">CIDOC CRM</a>'|safe,
+                link_wiki='<a target="_blank" rel="noopener" href="https://redmine.craws.net/projects/uni/wiki">Wiki</a>'|safe,
+                link_demo='<a target="_blank" rel="noopener" href="https://openatlas.craws.net">Demo</a>'|safe
             )|nl2br|safe }}
         </div>
     {% endif %}
