Update credits urls

--- a/openatlas/templates/index/credits.html
+++ b/openatlas/templates/index/credits.html
@@ -40,7 +40,7 @@
     <a target="_blank" rel="noopener" href="https://www.oeaw.ac.at/">
         <img src="/static/images/sponsors/logo_oeaw.png" alt="ÖAW" />
     </a>
-    <a target="_blank" rel="noopener" href="http://www.oeaw.ac.at/imafo/">
+    <a target="_blank" rel="noopener" href="https://www.oeaw.ac.at/imafo/">
         <img src="/static/images/sponsors/logo_imafo.gif" alt="IMAFO" />
     </a>
     <a target="_blank" rel="noopener" href="https://www.univie.ac.at/en/">
@@ -54,8 +54,7 @@
              alt="ACDH - Austrian Centre for Digital Humanities" />
     </a>
     <p>
-        <a target="_blank" rel="noopener"
-           href="http://www.oeaw.ac.at/imafo/arbeitsgruppen/fruehmittelalter/projekte-historische-identitaetsforschung/einzelprojekte/ostalpenraum-revisited/">
+        <a target="_blank" rel="noopener" href="https://www.oeaw.ac.at/imafo/forschung/historische-identitaetsforschung/projekte/weitere-projekte/ostalpenraum-revisited/">
             Ostalpenraum-revisited
         </a>
     </p>
