--- a/openatlas/templates/file/add.html
+++ b/openatlas/templates/file/add.html
@@ -1,6 +1,11 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('file_index') }}">{{ _('files')|uc_first }}</a>
+    <a href="{{ url_for(config['CODE_CLASS'][origin.class_.code] + '_index') }}">
+        {{ _(config['CODE_CLASS'][origin.class_.code])|uc_first }}
+    </a>
+    > {{ origin|link|safe }}
+    > {{ _('add')|uc_first + ' ' + _('file')|uc_first }}
 {% endblock %}
 {% block content %}
+    {{ form|safe }}
 {% endblock %}
