--- a/openatlas/templates/place/view.html
+++ b/openatlas/templates/place/view.html
@@ -18,6 +18,7 @@
             <li><a href="#tab-actor">{{ _('actor')|uc_first }} ({{ tables['actor']['data']|length }})</a></li>
         {% endif %}
         <li><a href="#tab-reference">{{ _('reference')|uc_first }} ({{ tables['reference']['data']|length }})</a></li>
+        <li><a href="#tab-file">{{ _('files')|uc_first }}  ({{ tables['file']['data']|length }})</a></li>
     </ul>
     <div id="tab-info">
         <div class="button-bar">
@@ -73,6 +74,15 @@
             </div>
         {% endif %}
         {{ tables['reference']|pager|safe }}
+    </div>
+    <div id="tab-file">
+        {% if 'editor'|is_authorized: %}
+            <div class="button-bar">
+                <a href="{{ url_for('file_add', origin_id=object_.id)}}">{{ _('add')|uc_first }}</a>
+                <a href="{{ url_for('file_insert', origin_id=object_.id) }}">+ {{ _('file')|uc_first }}</a>
+            </div>
+        {% endif %}
+        {{ tables['file']|pager|safe }}
     </div>
 </div>
 {% endblock %}
