--- a/openatlas/templates/reference/view.html
+++ b/openatlas/templates/reference/view.html
@@ -11,6 +11,7 @@
         <li><a href="#tab-event">{{ _('event')|uc_first }} ({{ tables['event']['data']|length }})</a></li>
         <li><a href="#tab-actor">{{ _('actor')|uc_first }} ({{ tables['actor']['data']|length }})</a></li>
         <li><a href="#tab-place">{{ _('place')|uc_first }} ({{ tables['place']['data']|length }})</a></li>
+        <li><a href="#tab-file">{{ _('files')|uc_first }}  ({{ tables['file']['data']|length }})</a></li>
     </ul>
     <div id="tab-info">
         <div class="button-bar">
@@ -44,5 +45,14 @@
             {{ tables[name]|pager|safe }}
         </div>
     {% endfor %}
+    <div id="tab-file">
+        {% if 'editor'|is_authorized: %}
+            <div class="button-bar">
+                <a href="{{ url_for('file_add', origin_id=reference.id)}}">{{ _('add')|uc_first }}</a>
+                <a href="{{ url_for('file_insert', origin_id=reference.id) }}">+ {{ _('file')|uc_first }}</a>
+            </div>
+        {% endif %}
+        {{ tables['file']|pager|safe }}
+    </div>
 </div>
 {% endblock %}
