--- a/openatlas/templates/source/view.html
+++ b/openatlas/templates/source/view.html
@@ -12,6 +12,7 @@
         <li><a href="#tab-place">{{ _('place')|uc_first }} ({{ tables['place']['data']|length }})</a></li>
         <li><a href="#tab-reference">{{ _('reference')|uc_first }} ({{ tables['reference']['data']|length }})</a></li>
         <li><a href="#tab-text">{{ _('texts')|uc_first }} ({{ tables['text']['data']|length }})</a></li>
+        <li><a href="#tab-file">{{ _('files')|uc_first }}  ({{ tables['file']['data']|length }})</a></li>
     </ul>
     <div id="tab-info">
         <div class="button-bar">
@@ -61,6 +62,15 @@
             </div>
         {% endif %}
         {{ tables['text']|pager|safe }}
+    </div>
+    <div id="tab-file">
+        {% if 'editor'|is_authorized: %}
+            <div class="button-bar">
+                <a href="{{ url_for('file_add', origin_id=source.id)}}">{{ _('add')|uc_first }}</a>
+                <a href="{{ url_for('file_insert', origin_id=source.id) }}">+ {{ _('file')|uc_first }}</a>
+            </div>
+        {% endif %}
+        {{ tables['file']|pager|safe }}
     </div>
 </div>
 {% endblock %}
