--- a/openatlas/templates/file/view.html
+++ b/openatlas/templates/file/view.html
@@ -18,7 +18,7 @@
             {{ entity|page_buttons|safe }}
             {% if 'editor'|is_authorized: %}
                 <a href="{{ url_for('file_update', id_=entity.id) }}">{{ _('edit')|uc_first }}</a>
-                {{ entity|build_delete_link|safe }}
+                {{ entity|display_delete_link|safe }}
             {% endif %}
             {{ entity.id|bookmark_toggle|safe }}
         </div>
