--- a/openatlas/templates/file/index.html
+++ b/openatlas/templates/file/index.html
@@ -3,5 +3,10 @@
     <a href="{{ url_for('file_index') }}">{{ _('files')|uc_first }}</a>
 {% endblock %}
 {% block content %}
+    {% if 'editor'|is_authorized: %}
+        <div class="button-bar">
+            <a href="{{ url_for('file_insert') }}">+ {{ _('file')|uc_first }}</a>
+        </div>
+    {% endif %}
     {{ table|pager|safe }}
 {% endblock %}
