--- a/openatlas/templates/file/insert.html
+++ b/openatlas/templates/file/insert.html
@@ -9,5 +9,14 @@
     > + {{ _('file')|uc_first }}
 {% endblock %}
 {% block content %}
+    <p>
+        {{ _('max size')|uc_first }}:
+        <span style="font-weight: bold;">{{ session['settings']['file_upload_max_size'] }} MB </span>
+        - {{ _('if exceeded you will receive a connection error')|uc_first }}.
+    </p>
+    <p>
+        {{ _('allowed extensions')|uc_first }}:
+        <span style="font-weight: bold;">{{ session['settings']['file_upload_allowed_extension'] }}</span>
+    </p>
     {{ form|display_form|safe }}
 {% endblock %}
