--- a/openatlas/templates/file/view.html
+++ b/openatlas/templates/file/view.html
@@ -20,9 +20,28 @@
                 {{ entity|display_delete_link|safe }}
             {% endif %}
             {{ entity.id|bookmark_toggle|safe }}
+            {% if missing_file %}
+                <span class="error">{{ _('missing file')|uc_first }}!</span>
+            {% else %}
+                <a href="{{ url_for('download_file', filename=filename) }}">{{ _('download')|uc_first }}</a>
+            {% endif %}
         </div>
         <h1>{{ entity.name }}</h1>
-        {{ tables['info']|data_table|safe }}
+        <div>
+            <div style="float:left;">
+                {{ tables['info']|data_table|safe }}
+            </div>
+            <div class="preview" style="float:left;">
+                {% if preview: %}
+                    <a href="{{ url_for('display_file', filename=filename) }}" target="_blank">
+                        <img alt="{{ filename }}" src="{{ url_for('display_file', filename=filename) }}" />
+                    </a>
+                {% elif not missing_file %}
+                    {{ _('no preview available')|uc_first }}
+                {% endif %}
+            </div>
+        </div>
+        <div style="clear:both;"></div>
         {{ entity|description|safe }}
     </div>
     <div id="tab-source">
