--- a/openatlas/templates/place/view.html
+++ b/openatlas/templates/place/view.html
@@ -19,6 +19,7 @@
         {% endif %}
         <li><a href="#tab-reference">{{ _('reference')|uc_first }} ({{ tables['reference']['data']|length }})</a></li>
         <li><a href="#tab-file">{{ _('files')|uc_first }}  ({{ tables['file']['data']|length }})</a></li>
+        <li><a href="#tab-feature">{{ _('feature')|uc_first }}  ({{ tables['feature']['data']|length }})</a></li>
     </ul>
     <div id="tab-info">
         <div class="button-bar">
@@ -83,6 +84,12 @@
             </div>
         {% endif %}
         {{ tables['file']|pager|safe }}
+    </div>
+    <div id="tab-feature">
+        <div class="button-bar">
+            <a href="{{ url_for('place_insert', origin_id=object_.id)}}">{{ _('add')|uc_first }}</a>
+        </div>
+        {{ tables['feature']|pager|safe }}
     </div>
 </div>
 {% endblock %}
