--- a/openatlas/templates/place/view.html
+++ b/openatlas/templates/place/view.html
@@ -19,7 +19,9 @@
         {% endif %}
         <li><a href="#tab-reference">{{ _('reference')|uc_first }} ({{ tables['reference']['data']|length }})</a></li>
         <li><a href="#tab-file">{{ _('files')|uc_first }}  ({{ tables['file']['data']|length }})</a></li>
-        <li><a href="#tab-feature">{{ _('feature')|uc_first }}  ({{ tables['feature']['data']|length }})</a></li>
+        {% if object_.system_type == 'place' %}
+            <li><a href="#tab-feature">{{ _('feature')|uc_first }}  ({{ tables['feature']['data']|length }})</a></li>
+        {% endif %}
     </ul>
     <div id="tab-info">
         <div class="button-bar">
@@ -87,11 +89,13 @@
         {% endif %}
         {{ tables['file']|pager|safe }}
     </div>
-    <div id="tab-feature">
-        <div class="button-bar">
-            <a href="{{ url_for('place_insert', origin_id=object_.id)}}">{{ _('add')|uc_first }}</a>
+    {% if object_.system_type == 'place' %}
+        <div id="tab-feature">
+            <div class="button-bar">
+                <a href="{{ url_for('place_insert', origin_id=object_.id)}}">+ {{ _('feature')|uc_first }}</a>
+            </div>
+            {{ tables['feature']|pager|safe }}
         </div>
-        {{ tables['feature']|pager|safe }}
-    </div>
+    {% endif %}
 </div>
 {% endblock %}
