--- a/openatlas/templates/place/view.html
+++ b/openatlas/templates/place/view.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
     <a href="{{ url_for('place_index') }}">{{ _('place')|uc_first }}</a>
+    {{ '> ' + place|link|safe if place else '' }}
+    {{ '> ' + feature|link|safe if feature else '' }}
     > {{ object_.name|truncate_string|safe }}
 {% endblock %}
 {% block content %}
@@ -21,6 +23,8 @@
         <li><a href="#tab-file">{{ _('files')|uc_first }}  ({{ tables['file']['data']|length }})</a></li>
         {% if object_.system_type == 'place' %}
             <li><a href="#tab-feature">{{ _('feature')|uc_first }}  ({{ tables['feature']['data']|length }})</a></li>
+        {% elif object_.system_type == 'feature' %}
+            <li><a href="#tab-stratigraphic_unit">{{ _('stratigraphic unit')|uc_first }}  ({{ tables['stratigraphic_unit']['data']|length }})</a></li>
         {% endif %}
     </ul>
     <div id="tab-info">
@@ -95,6 +99,13 @@
                 <a href="{{ url_for('place_insert', origin_id=object_.id)}}">+ {{ _('feature')|uc_first }}</a>
             </div>
             {{ tables['feature']|pager|safe }}
+        </div>
+    {% elif object_.system_type == 'feature' %}
+        <div id="tab-stratigraphic_unit">
+            <div class="button-bar">
+                <a href="{{ url_for('place_insert', origin_id=object_.id)}}">+ {{ _('stratigraphic unit')|uc_first }}</a>
+            </div>
+            {{ tables['stratigraphic_unit']|pager|safe }}
         </div>
     {% endif %}
 </div>
