--- a/openatlas/templates/place/view.html
+++ b/openatlas/templates/place/view.html
@@ -34,7 +34,9 @@
         <div class="button-bar">
             {% if 'editor'|is_authorized: %}
                 <a href="{{ url_for('place_update', id_=object_.id) }}">{{ _('edit')|uc_first }}</a>
-                {{ object_|display_delete_link|safe }}
+                {% if not has_subunits: %}
+                    {{ object_|display_delete_link|safe }}
+                {% endif %}
             {% endif %}
             {{ object_.id|bookmark_toggle|safe }}
         </div>
