--- a/openatlas/templates/types/index.html
+++ b/openatlas/templates/types/index.html
@@ -81,6 +81,7 @@
             $("#tabs-system").tabs().addClass("ui-tabs-vertical");
             $("#tabs-custom").tabs().addClass("ui-tabs-vertical");
             $("#tabs-places").tabs().addClass("ui-tabs-vertical");
+            $("#tabs-value").tabs().addClass("ui-tabs-vertical");
             openParentTab();
         });
     </script>
